--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "React components for collaborative editing: text, rich text, and complex forms",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chili-epfl/collab-react-components"
+    "url": "git+https://github.com/paramjeetkumar7297470/collab-react-components"
   },
   "author": "Dario Anongba Varela <dario.anongba@gmail.com> (http://dario-anongba.me)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chili-epfl/collab-react-components/issues"
+    "url": "https://github.com/paramjeetkumar7297470/collab-react-components/issues"
   },
-  "homepage": "https://github.com/chili-epfl/collab-react-components#readme",
+  "homepage": "https://github.com/paramjeetkumar7297470/collab-react-components#readme",
   "keywords": [
     "react",
     "sharedb",
@@ -79,6 +79,7 @@
     "http": "0.0.0",
     "prop-types": "^15.5.9",
     "react-jsonschema-form": "^0.48.2",
+    "react-quill": "github:paramjeetkumar7297470/react-quill",
     "reconnecting-websocket": "^3.0.5",
     "rich-text": "^3.1.0",
     "sharedb": "^1.0.0-beta.7",
